# distriqueue

./: DEPLOYMENT.md  LICENSE  README.md  backup.sh  build-run.sh  configure-firewall.sh  configure-hosts.sh  docker-compose.yml  ssl-tls-config.sh  start-distriqueue.sh  system-tuning.sh
config/nginx/: h2.conf  nginx.conf
config/nginx/conf.d/: h2.conf
config/rabbitmq/: definitions.json  rabbitmq.conf
deploy/config/: vm1.env  vm2.env
deploy/scripts/: build.sh  deploy-remote.sh  deploy-vm1.sh  deploy-vm2.sh  verify-deployment.sh
docs/: api-spec.yaml  architecture.md
documentation/: README.md
documentation/src/: acknowledgments.tex  bibliography.bib  frontespizio.tex  main.tex
documentation/src/chapters/: 01-introduction.tex  02-system-architecture.tex  03-distributed-systems-challenges-and-solutions.tex  (+2 more)
gateway/: README.md  pom.xml
gateway/migration/: jobs.sql
monitoring/: prometheus.yml
orchestrator/: README.md  build-orchestrator.sh  rebar.config
orchestrator/config/: sys.config  vm.args
orchestrator/docker/: Dockerfile
orchestrator/src/: distriqueue.app.src  distriqueue.erl  distriqueue.hrl  distriqueue_api.erl  distriqueue_sup.erl  dq_worker_pool.erl  health_monitor.erl  http_server.erl  job_registry.erl  metrics_exporter.erl  rabbitmq_client.erl  raft_fsm.erl  router.erl  worker_pool.erl
scripts/: demo_scenarios.sh  test_submit.py
workers/java-worker/: README.md  pom.xml
workers/python-worker/: .env  Dockerfile  README.md  worker.py
workers/rust-worker/: .env  Cargo.toml  README.md
workers/rust-worker/src/: main.rs
(+55 files in other folders)
